--- a/HUSEN ALGIFARI 23/index.html
+++ b/HUSEN ALGIFARI 23/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>HusenAlgifari28</title>
+  <title>Mercon Duar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <style type="text/css">
     @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
